--- a/docs/config.json
+++ b/docs/config.json
@@ -12,10 +12,10 @@
         "clean_urls": true
     },
     "html": {
-        "theme": "daux-blue",
+        "theme": "daux-red",
         "breadcrumbs": true,
         "breadcrumb_separator": "Chevrons",
-        "toggle_code": true,
+        "toggle_code": false,
         "date_modified": true,
         "float": true
     }
