--- a/docs/config.json
+++ b/docs/config.json
@@ -17,6 +17,6 @@
         "breadcrumb_separator": "Chevrons",
         "toggle_code": false,
         "date_modified": true,
-        "float": true
+        "float": false
     }
 }
