--- a/docs/config.json
+++ b/docs/config.json
@@ -12,7 +12,7 @@
         "clean_urls": true
     },
     "html": {
-        "theme": "daux-red",
+        "theme": "daux-navy",
         "breadcrumbs": true,
         "breadcrumb_separator": "Chevrons",
         "toggle_code": false,
